# anvil

./: .gitignore  .npmignore  README.md  README_FR.md  oxfmt.config.ts  oxlint.config.ts  package.json
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
docs/: api.md  build.md  icons.md  index.md  server.md  session.md
docs/.vitepress/: config.ts
docs/config/: index.md  mods.md
docs/fr/: api.md  build.md  icons.md  index.md  server.md  session.md
docs/fr/config/: index.md  mods.md
docs/fr/guide/: commands.md  getting-started.md  project-structure.md
docs/guide/: commands.md  getting-started.md  project-structure.md
example/: config.json  package.json
example/src/: api.js  index.html
examples/: .gitignore  README.md
examples/.github/workflows/: build-launcher.yml
examples/anvil-server/: .gitignore  config.json  package.json
examples/anvil-server/src/: index.html
examples/custom-session/: .gitignore  config.json  package.json
examples/vanilla-js/: config.json  package.json
examples/vanilla-ts/: .gitignore  package.json
server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json  vite.config.ts
server/src/: auth.ts  db.ts  env.ts  index.ts  password.ts  storage.test.ts  storage.ts  totp.ts  webauthn.ts
server/ui/: index.html
src/: cli.cjs
src/cli/: commands.ts  icons.ts  index.ts  scaffold.ts  tauri.ts  templates.ts
src/client/: config.schema.json  index.d.ts
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/template/: _gitignore  config.json  tauri.conf.json
tests/: cli.test.ts
(+51 files in other folders)
