[package]
name = "{{name}}"
version = "1.0.0"
description = "Minecraft Launcher"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "{{name}}"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "5"
zip = "2"
tar = "0.4"
flate2 = "1"
chrono = "0.4"
